# backend/src/main/java/br/com/elitedevticket/events/http/TicketSectorListResponse.java
@@ -1,0 +1,8 @@
+package br.com.elitedevticket.events.http;
+
+import java.util.List;
+
+public record TicketSectorListResponse(
+        List<TicketSectorResponse> sectors
+) {
+}
